# ensemble_HiSTs

./: .gitignore  pyproject.toml
scripts/multiscale_HiTS_exp/: Fig 2-Copy1.ipynb  Fig 2.ipynb  Fig3.ipynb  HW4-KS.ipynb  KuraSiva.ipynb  all_combos.py  all_combos_1.npy  all_combos_128.npy  all_combos_16.npy  all_combos_32.npy  all_combos_4.npy  all_combos_64.npy  all_combos_8.npy  all_combos_KS.npy  all_combos_flower5.npy  data_generation.ipynb  edit_combos.py  explore_get_all_combos.ipynb  general_train_post-Copy1.ipynb  general_train_post.ipynb  general_train_post.py  general_train_post.py.ipynb  general_train_post.slurm  generate_data.py  generate_data_cos.py  generate_data_vdp.py  generate_data_vdp.slurm  kuramoto_sivashinky.m  kuramoto_sivishinky.mat  kuramoto_sivishinky2.mat  kuramoto_sivishinky_test2.mat  less_data_vanderpol.py  make_combos.py  make_combos.slurm  model_training.ipynb  model_training_depend_next_step.ipynb  model_training_depend_next_step_post.ipynb  model_training_original.ipynb  model_training_post_less_data.ipynb  model_training_post_less_data_onesteam.ipynb  (+52 more)
scripts/sequence_generation_exp/: Bach.ipynb  flower.ipynb  flower_fig.py  ks_equation.ipynb  sample_saved.npy  seq_generations_Bach.ipynb  seq_generations_KS.ipynb  (+2 more)
src/: ResNet.py  Resnet_multiscale.py  Resnet_multiscale_3.py  Resnet_multiscale_general.py  Resnet_multiscale_general_examine_training.py  Resnet_multiscale_general_examine_training_allval.py  Resnet_multiscale_general_val10.py  Resnet_multiscale_transfer.py  __init__.py  post_utils.py  utils.py  utils_multiscale.py
(+31 files in other folders)
