[project]
name = "multiscale_Time_depends"
description = "Package for ensemble learned"
version = "0.1.0"
authors = [
    { name = "Katie", email = "kjohnst@uw.edu" }
]
dependencies = [
    "scikit-learn>=1.1",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]